plugins {
    id 'java'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(8)
	}
}

repositories {
	mavenCentral()
	flatDir {
		dirs "${project(':aes-processor').projectDir}/build/libs"
	}
}

dependencies {
	annotationProcessor group: 'com.ijioio', name: 'aes-processor', version: '1.0.0'
	implementation project(':aes-annotation')
	implementation project(':aes-core')
	implementation group: 'javax.persistence', name: 'persistence-api', version: '1.0.2'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.1'
}
